assets/css/styles.css
html, body {
    width: 100%;
    height: 100%;
}

/* RESETS */
html, body, section, div, h1, h2, h3, h4, h5, h6, p, ul, li, span {
    margin: 0;
    padding: 0;
}

a, a:hover, a:active {
    color: inherit;
    text-decoration: none;
    font-weight: normal;
}

input, hr, textarea, button, submit {
    border: none;
}

ol, ul {
    list-style: none;
}

/* GENERAL RULES */
body {
    background: #fff url(../images/prism-bg.png) repeat;
    font-family: 'Arial', 'Helvetica Neue', 'Helvetica', sans-serif;
    font-size: 16px;
    line-height: 1.5;
    color: #777777;
}

header {
    background: #fff;
    border-bottom: #cccccc 2px solid;
}

header .container {
    border: none;
}

header .logo {
    background: #4aaaa5;
    float: left;
    padding: 20px 30px;
}

header .logo h1 {
    display: block;
    color: #fff;
}

header nav {
    float: right;
    font-size: 20px;
}

header nav li {
    float: left;
    border-right: 2px solid #dddddd;
}

header nav li a {
    display: block;
    padding: 29px 37px;
}

header nav li:last-of-type {
    border-right: none;
}

header:after,
header:before {
    content: " ";
    clear: both;
    display: table;
}

.wrapper {
    min-height: 100%;
}

.container {
    max-width: 960px;
    background: #ffffff;
    border: 2px solid #dddddd;
    margin: 25px auto;
}

.container h2 {
    font-family: 'Georgia', 'Times', 'Times New Roman', serif;
    color: #4aaaa5;
    padding: 15px 25px 0;
}

.container h2 + * {
    border-top: 2px solid #ccc;
    padding-top: 25px;
    margin: 15px 25px 25px;
}

footer {
    background: #666666;
    border-top: 10px solid #4aaaa5;
    min-height: 100px;
}

footer h6 {
    text-align: center;
    color: #dddddd;   
}

/* ABOUT PAGE RULES */
#about-me img {
    float: left;
    padding-right: 15px;
    padding-bottom: 15px;
}

#about-me p {
    line-height: 1.8;
    padding: 10px 0;
}

#about-me p:first-of-type {
    padding-top: 0;
}

/* CONTACT PAGE RULES */
#contact ul li {
    margin: 15px 0;
    
}
#contact label,
#contact input {
    display: block;
}

#contact input,
#contact textarea {
    width: 100%;
    font-size: 16px;
    padding: 5px;
    border: 2px solid #dddddd;
    box-sizing: border-box;
}

#contact #submit {
    background: #4aaaa5;
    width: auto;
    padding: 10px 20px;
    color: #fff;
    text-transform: capitalize;
}

/* PORTFOLIO PAGE RULES */
#portfolio .links-grid {
    margin: -15px;
}

#portfolio .links-grid .grid-item {
    position: relative;
    display: inline-block;
    margin: 15px;
    width: 300px;
    overflow: hidden;
}

#portfolio .links-grid .grid-item a {
    display: block;
}

#portfolio .links-grid .grid-item img {
    min-width: 100%;
    height: auto;
}

#portfolio .links-grid .grid-item .grid-description {
    background: #4aaaa5;
    position: absolute;
    bottom: 20px;
    left: 0;
    right: 0;
    padding: 10px;
    text-align: center;
    color: #fff;
    -webkit-transform: translateY(100px);
    transform: translateY(100px);
}

/* TRANSITION RULES */
header nav li a:hover,
.logo:hover,
.logo:hover h1,
#about-me img:hover,
#contact input:focus,
#contact textarea:focus,
#contact #submit:active,
#portfolio .links-grid .grid-item a:hover .grid-description
 {
    -webkit-transition: all 350ms ease-out 0s;
    transition: all 350ms ease-out 0s;
}

header nav li a:hover {
    color: #fff;
    background: #4aaaa5;
}

.logo:hover {
    background: #333;
}

.logo:hover h1 {
    color: #4aaaa5;
}

#about-me img:hover {
    -webkit-filter: blur(5px) grayscale(45%);
    filter: blur(5px) grayscale(45%);
}

#portfolio .links-grid .grid-item a:hover .grid-description {
    -webkit-transform: translateY(0px);
    transform: translateY(0px);
    transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

#contact textarea:focus,
#contact input:focus {
    border: 4px solid #ff0000;
}

#contact #submit:active {
    color: #4aaaa5;
    background: #777777;
}

